--- a/prjEShopping/prjEShopping.csproj
+++ b/prjEShopping/prjEShopping.csproj
@@ -220,6 +220,7 @@
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
     <Content Include="Views\Home\Login.cshtml" />
+    <Content Include="Views\Home\MemberEdit.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
